# dikmax.name

./: .gitattributes  .gitignore  .gitmodules  .mdastrc  Build.hs  README.md  _config.yml  about.md  build-map.sh  build-scripts.sh  build-styles.sh  build.sh  cabal-build.sh  deploy.sh  dikmax-name.cabal  disqus-sync.sh  fontello-config.json  gjslint.config  index.md  latest.md  package.json  projects.md  prose.yml  rebuild-deploy.sh  restart.sh  resume.md  robots.txt  shake.sh  shoutbox.md  site.hs  stack.yaml  symlinkdev.sh  update-server.sh  update.sh  yandex-widget-manifest.json
collections/: eurotrip-2014.txt  latest-travel.txt  md_proc.txt  proofreaders-stories.txt  usa-2014.txt
comments/: 2012-05-30T14:43:25-first-541905317.html  2012-05-30T14:53:28-first-541913366.html  2012-05-30T14:54:27-first-541914051.html  2012-05-31T11:50:45-first-543548725.html  2012-05-31T11:53:46-first-543553765.html  2012-06-02T11:14:13-walking-545636281.html  2012-06-04T09:43:49-waytooffice-546806428.html  2012-06-04T09:47:17-waytooffice-546807495.html  2012-06-05T07:12:45-dbbug-547619474.html  2012-06-05T07:13:37-dbbug-547619773.html  2012-06-05T07:16:02-dbbug-547620561.html  2012-06-05T09:28:17-dbbug-547664268.html  2012-06-05T09:30:21-dbbug-547664967.html  2012-06-06T09:38:40-dbbug-548613274.html  2012-06-06T09:41:30-dbbug-548614268.html  2012-06-07T12:10:33-work-549760490.html  2012-06-07T12:13:40-work-549762733.html  2012-06-08T08:50:27-tags-551402258.html  2012-06-08T10:12:22-tags-551646765.html  2012-06-11T12:40:50-networkhttp-554328867.html  2012-06-11T12:43:08-devconf-554329949.html  2012-06-11T12:50:24-devconf-554333571.html  2012-06-11T12:51:38-networkhttp-554334385.html  2012-06-12T06:08:55-kudohb-554980682.html  2012-06-14T13:59:10-pae-557190089.html  2012-06-14T14:01:21-pae-557191929.html  2012-06-15T08:03:59-pae-558192118.html  2012-06-15T08:13:28-pae-558203248.html  2012-06-17T07:42:46-pae-560246058.html  2012-06-18T07:36:04-eclipse-560829877.html  2012-06-18T07:41:47-eclipse-560831403.html  2012-06-18T09:14:25-eclipse-560857884.html  2012-06-18T09:21:15-eclipse-560859925.html  2012-06-18T09:26:08-eclipse-560861263.html  2012-06-18T12:19:16-meondevconf-560957298.html  2012-06-18T12:20:38-meondevconf-560958056.html  2012-06-18T12:33:05-meondevconf-560965536.html  2012-06-20T18:11:58-eclipse-562972781.html  2012-06-20T18:14:21-eclipse-562974570.html  2012-06-20T18:30:37-eclipse-562986830.html  (+952 more)
css/: bootstrap.css.REMOVED.git-id  style.css  style.css.REMOVED.git-id
dart/: acotest.dart  app.dart  main.dart  pubspec.yaml  route-planner.dart  s.js  script-map.dart  script-map.dart.js  script-route-planner.dart  script-route-planner.dart.REMOVED.git-id  script-route-planner.dart.js  script-route-planner.dart.js.REMOVED.git-id  script.dart  script.dart.js  script.dart.js.REMOVED.git-id  smap.js
disqus-sync/: package.json  sync.js
fonts/: fontello.eot
images/: bg.jpg.REMOVED.git-id
js/: deps.js.REMOVED.git-id  highlight.pack.js  script.js  script.js.REMOVED.git-id  script.js.map.REMOVED.git-id  waterman.js
less/: MojoShare.less  print.less  site.less  solarized_dark.less  style.less  variables.less
map/: data.json  (+2 more)
(+861 files in other folders)
