Name:                dikmax-name
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Maxim Dikun
Maintainer:          me@dikmax.name
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable dikmax-name
  hs-source-dirs: .
  main-is: site.hs

  Build-depends:
    base >= 4 && < 5,
    blaze-builder >= 0.3.1.1 && < 0.4,
    containers >= 0.5 && < 0.6,
    filepath >= 1.3 && < 1.4,
    hakyll >= 4.3.3.0 && < 4.4,
    mtl >= 2.1.2 && < 2.2,
    old-locale >= 1 && < 1.1,
    pandoc >= 1.11.1 && < 1.12,
    regex-compat >= 0.95.1,
    tagsoup >= 0.12 && < 0.13,
    text >= 0.11.3.1 && < 0.12,
    time >= 1.4 && < 1.5,
    xmlhtml >= 0.2.3 && < 0.3
