Name:                dikmax-name
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Maxim Dikun
Maintainer:          me@dikmax.name
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Development mode
  Default: False

Executable dikmax-name
  hs-source-dirs: src
  main-is: Site.hs

  Build-depends:
    base >= 4 && < 5,
    blaze-builder >= 0.4 && < 0.5,
    containers >= 0.5 && < 0.6,
    filepath >= 1.4 && < 1.5,
    hakyll >= 4.7.0.0 && < 4.8,
    mtl >= 1 && < 2.3,
    pandoc >= 1.15 && < 1.16,
    regex-compat >= 0.95.1,
    tagsoup >= 0.13.1 && < 0.14,
    text >= 0.11 && < 1.3,
    time >= 1.5 && < 1.6,
    xmlhtml >= 0.2.3 && < 0.3

  if flag(development)
      cpp-options: -DDEVELOPMENT
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-unused-do-bind
  else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-unused-do-bind

Executable server
  hs-source-dirs: src
  main-is: Server.hs

  Build-depends:
    attoparsec                >= 0.12  && < 0.13,
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    directory                 >= 1.2   && < 1.3,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    process                   >= 1.2   && < 1.3,
    snap-core                 >= 0.9   && < 0.11,
    snap-server               >= 0.9   && < 0.11,
    system-filepath           == 0.4.*,
    transformers              >= 0.4   && < 0.5,
    unix-compat               >= 0.2   && < 0.5,
    unordered-containers      >= 0.1.4.3 && < 0.3,
    utf8-string               >= 1.0 && < 1.1

  if flag(development)
      cpp-options: -DDEVELOPMENT

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
